# governance

./: CHANGELOG.md  CONTRIBUTING.md  CURRENT_VS_INJECTABLE_COMPARISON.md  EXECUTIVE_SUMMARY.md  FRAMEWORK_RESTRUCTURING_PLAN.md  IMPLEMENTATION_SUMMARY.md  INJECTABLE_FRAMEWORK_PLANNING_GUIDE.md  MASTER_IMPLEMENTATION_ROADMAP_TODO.md  PHASE_1_FOUNDATION_TODO.md  PHASE_2_CORE_FRAMEWORK_TODO.md  PHASE_3_TOOLING_AUTOMATION_TODO.md  PHASE_4_DOCUMENTATION_EXAMPLES_TODO.md  PHASE_5_ADVANCED_FEATURES_TODO.md  PHASE_6_POLISH_SCALE_TODO.md  PLANNING_START_HERE.md  README-GUIDE.md  README.md  REPOSITORY_ANALYSIS_AND_RECOMMENDATIONS.md  START_HERE_ANALYSIS_GUIDE.md  VISUAL_STRUCTURE_SUMMARY.md  WORKFLOW_GUIDELINES.md
00. Implementation/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  (+2 more)
templates/starter-kits/python-project/: .gitignore  P0TODO.md  P1TODO.md  P2TODO.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
templates/starter-kits/python-project/.github/workflows/: governance.yml
templates/starter-kits/python-project/.repo/agents/checklists/: change-plan.md  pr-review.md
templates/starter-kits/python-project/.repo/docs/: DOCS_INDEX.md
templates/starter-kits/python-project/.repo/docs/adr/: 0001-example.md
templates/starter-kits/python-project/.repo/templates/: RUNBOOK_TEMPLATE.md  WAIVER_TEMPLATE.md
templates/starter-kits/python-project/scripts/: validate-governance.py
templates/starter-kits/python-project/src/: main.py  utils.py
templates/starter-kits/python-project/tests/: test_main.py  test_utils.py
(+327 files in other folders)
